--- a/app/globals.css
+++ b/app/globals.css
@@ -45,28 +45,31 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
 
-    /* scrollbar-gutter: stable; */
+    scrollbar-gutter: stable;
 }
 
-:root::-webkit-scrollbar {
-    display: none;
+/* :root::-webkit-scrollbar { */
+/*     display: none; */
+/* } */
+
+::-webkit-scrollbar {
+    width: 12px;
 }
 
-/* ::-webkit-scrollbar { */
-/*     width: 12px; */
-/* } */
-/* ::-webkit-scrollbar-track { */
-/*     background: var(--color-black); */
-/* } */
-/* ::-webkit-scrollbar-thumb { */
-/*     border: 4px solid var(--color-black); */
-/*     width: 6px; */
-/*     background: var(--color-main); */
-/*     border-radius: 10px; */
-/* } */
-/* ::-webkit-scrollbar-thumb:hover { */
-/*     background: var(--color-purple); */
-/* } */
+::-webkit-scrollbar-track {
+    background: var(--color-black);
+}
+
+::-webkit-scrollbar-thumb {
+    border: 4px solid var(--color-black);
+    width: 6px;
+    background: var(--color-main);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-purple);
+}
 
 :root {
     --loader-width: 300px;
