--- a/app/globals.css
+++ b/app/globals.css
@@ -78,6 +78,11 @@ body {
     --loader-acc: 0.8;
 }
 
+.fit-canvas {
+    width: var(--canvas-width);
+    height: var(--canvas-height);
+}
+
 #bg-loader .bg-loader-square:nth-child(1) {
     --i: 1;
 }
